--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -21,8 +21,10 @@
     "zod": "^3.22.4",
     "undici": "^6.6.0",
     "rss-parser": "^3.13.0",
-    "pdf-parse": "^1.1.1",
     "cheerio": "^1.0.0-rc.12"
+  },
+  "optionalDependencies": {
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
